2008-04-05 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix critical bug and use default system font.

2008-04-05 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/MMapArea.py
	* data/labyrinth-ui.xml
	* data/labyrinth.glade
	Restructured menu bar according to the GNOME HIG.

2008-04-05 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	* src/TextThought.py
	Fix theme colors. Use theme colors for text selection. Reduce
	code.

2008-04-04 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Links.py
	Use theme colors for links too.

2008-04-04 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/utils.py
	* src/MMapArea.py
	* src/TextThought.py
	Use Gtk theme colors and select according to GNOME's HIG.

2008-04-04 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/MMapArea.py
	Update link positions on bezier/line switch.
	* po/labyrinth.pot
	* po/de.po
	Updated german translation.

2008-04-03 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/utils.py
	* src/MainWindow.py
	* src/BaseThought.py
	* src/Links.py
	* src/MMapArea.py
	* data/labyrinth-ui.xml
	Add bezier curves as stated in the ideas. It can be activated in the
	edit menu.

2008-04-03 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Add alignment of thoughts, thus implementing Issue 87.

2008-04-03 Martin Schaaf <mascha@ma-scha.de>

	* src/MapList.py
	Refactoring of method _at_col_set_value.

2008-04-03 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* po/labyrinth.po
	* po/de.po
	* src/Browser.py
	Translator credits.
	* src/utils.py
	* src/ImageThough.py
	* src/DrawingThought.py
	Simplifications.

2008-04-03 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* po/es.po
	* po/LINGUAS
	Added spanish translation by Peter Gordon.

2008-04-02 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/TextThought.py